--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -73,7 +73,7 @@
 	--card-foreground: oklch(14.5% 0 0deg);
 	--popover: oklch(100% 0 0deg);
 	--popover-foreground: oklch(14.5% 0 0deg);
-	--primary: oklch(0.6717 0.2205 37.86);
+	--primary: oklch(67.17% 0.2205 37.86deg);
 	--primary-foreground: oklch(98.5% 0 0deg);
 	--secondary: oklch(97% 0 0deg);
 	--secondary-foreground: oklch(20.5% 0 0deg);
