implemented delete records

--- a/resources/scss/price-updater/steering-data-table.scss
+++ b/resources/scss/price-updater/steering-data-table.scss
@@ -40,6 +40,13 @@
 	}
 }
 
+.delete-icon {
+	display: inline-block;
+	margin-right: 5px;
+	margin-top: -4px;
+	vertical-align: middle;
+}
+
 .table-col-1 {
 	width: 6%;
 }
